# x

./: .build.yaml  .gitignore  .gitmodules  go.mod  go.sum  go.work  go.work.sum  main.go  pyproject.toml  shelf.sum
bpc/: base.go  bpc.go  byte.go  foo.go  go.mod  go.sum
bpc/test/: merges.txt  vocab.json
dataset/: clamped.go  count.go  count_test.go  download.go  file.go  go.mod  go.sum  parquet.go  reader.go  string.go
gpt2/: allocator.go  allocator_test.go  config.go  cuda.go  go.mod  model.go  model_test.go  onnx.go  platform_darwin.go  platform_default.go
gpt2/scripts/: base.py  conv.py  lens.py  logits.py
gpt2/test/: logits.f32
lesci/: go.mod  go.sum  lesci.go
llm/: causal.go  evaluator.go  go.mod  go.sum  job.go  perplexity.go  perplexity_test.go  pool.go  result.go  run.go  run_test.go  stat.go  tokenbuffer.go  tokenbuffer_test.go  utility.go
llm/scripts/: ppl.py
llmc/: datafile.go  go.mod  go.sum  header.go  pool.go  tokenize.go
onnx/: .gitignore  go.mod  go.sum  onnx.go
onnx/scripts/: gen.sh
profile/: go.mod  profile.go
res/lesci/: go.mod  go.sum  lesci.go
research/knobloch/: go.mod
research/lesci/: analyze.go  append.go  config.go  context.go  database.go  experiment.go  extract.go  go.mod  go.sum  lesci.go  peek.go  plot.go
research/sander/: analyze.go  experiment.go  extract.go  go.mod  go.sum  plot.go  reference.go
scripts/: conv.py
shelf/: go.mod  go.sum  hash.go  ignore.go  item.go  shelf.go
tensor/: contiguous.go  dense.go  dense_test.go  go.mod
tokenizer/: go.mod  go.sum
tui/: go.mod  progressbar.go
(+35 files in other folders)
