[project]
name = "x"
version = "0.1.0"
requires-python = "==3.12.12"
dependencies = [
    "transformers",
    "optimum",
    "optimum[onnxruntime]",
    "accelerate",
    "onnxruntime; sys_platform == 'darwin'",
    "onnxruntime-gpu; sys_platform != 'darwin'",
    "pyarrow>=23.0.0",
    "onnx>=1.17.0",
    "numpy>=2.4.2",
    "datasets>=4.5.0",
    "polars>=1.38.1",
    "matplotlib>=3.10.8",
]

[tool.uv]
required-environments = [
    "sys_platform == 'darwin' and platform_machine == 'arm64'",
    "sys_platform == 'linux' and platform_machine == 'x86_64'",
]